# pi-base

./: .gitignore  CHANGELOG.md  EXAMPLE_.pypirc  EXAMPLE_.pypirc.txt  MANIFEST.in  README.md  README.rst  package.json  pyproject.toml  tox.ini
blank/: blank.py  conf.yaml
docs/: GD_SERVICE.md  GET_STARTED.md  README.md  SDCARD-v1.7.md  SDCARD.md  authors.rst  changelog.rst  conf.py  index.rst
docs/_scripts/: generate_license_information.py
lib/: .gitignore  modpath.py
pi-base/: README.md
pi_base/: README.md  README.rst  SDCARD-v1.7.md  SDCARD.md  VERIFICATION.md  __main__.py  _version.py  is_editable.md  make.py  modpath.py  requirements.txt  upload.sh
pi_base/common/: common_install.sh  common_requirements.txt
pi_base/common/pkg/etc/wpa_supplicant/: wpa_supplicant.conf
pi_base/lib/: GD_SERVICE.md  app_utils.py  db_file.py  deploy_site.py  gd_service.py  large.py  loggr.py  manager.py  modpath.py  os_utils.py  printer.py  remoteiot.py  tput.py  winserial.py
pi_base/lib/tester/: TestScript.md  data_entry.py  test_script.py  tester_automation.py
pi_base/remoteiot.com/: install.sh  uninstall.sh
pi_base/scripts/: get-git-version.sh  install-python-macos.sh  pkg-check.sh  version.py
