[build-system]
requires      = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi_base"
version = "0.0.1"
authors = [
  { name="Ilya Ivanchenko", email="iva2k@yahoo.com" },
]
description = ""
keywords = ["raspberry pi"]
readme = "pi_base/README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
]

# [project.optional-dependencies]
# dev = ["check-manifest"]
# test = ["coverage"]

[project.urls]
Homepage = "https://github.com/iva2k/pi-base"
Issues = "https://github.com/iva2k/pi-base/issues"

[project.scripts]
# pi-base = "pi_base:main"
pi-base = "Project.pi_base:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# If there are data files included in your packages that need to be installed, specify them here.
"pi_base" = ["*.txt", "*.sh", "*.cmd"]
"pi_base.lib" = ["*"]

[tool.setuptools.packages.find]
namespaces = true
# where = ["."]
include = [
  "pi_base*",
]
exclude = [
  "pi_base.tests*",
  "pi_base.pictures*",
  "pi_base.scripts*"
]
